fix tab align in base css

--- a/assets/base.css
+++ b/assets/base.css
@@ -199,18 +199,6 @@ a {
   border-left-style: none;
 }
 
-/* .tab:focus {
-border-style: solid;
-  border-color: rgba(0,0,0,1);
-  border-bottom-style: none;
-  border-top-style: none;
-  color: black;
-  padding: 10px 14px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-} */
-
 #page-content > div:nth-child(n + 2) > a {
   visibility: hidden;
 }
